boss_tpbehind out of bound fix (#5961)